<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_margin="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_giant"
            android:layout_marginRight="@dimen/padding_giant"
            android:background="@drawable/background_button_show_hide_meeting_information">
            <TextView
                android:layout_margin="@dimen/padding_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_information"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                />
            <ImageButton
                android:id="@+id/hideInfoMeeting"
                android:padding="@dimen/padding_large"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/icon_hide_meeting_infomation"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/button_edit_mess" />
        </RelativeLayout>
        <include
            android:id="@+id/infoMeeting"
            layout="@layout/view_meeting_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_giant"
            android:layout_marginRight="@dimen/padding_giant"
            android:background="@drawable/background_button_show_hide_meeting_information">
        <TextView
            android:layout_margin="@dimen/padding_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_conversation_information"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            />
            <ImageButton
                android:id="@+id/btnEditMesses"
                android:padding="@dimen/padding_large"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/icon_edit_meeting_coversation"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/button_edit_mess" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="@dimen/padding_giant"
            android:padding="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcvConversationMess"/>
    </LinearLayout>
</ScrollView>